k8s-ingress.yml
# ---------- INGRESS ----------
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meeton-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: api.meeton.space
      http: 
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: meeton-apg
                port:
                  number: 8989
    # - host: meeton.space
    #   http:
    #     paths:
    #       - path: /
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: ui
    #             port:
    #               number: 3000
